# vibeflow_android

./: .gitignore  CLAUDE.md  README.md
.github/workflows/: android.yml
android/: .gitignore  build.gradle.kts  settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/assets/: eval_cases.json
android/app/src/main/cpp/: CMakeLists.txt  jni.c
android/app/src/main/kotlin/com/vibeflow/mobile/: MainActivity.kt  VibeFlowApp.kt
android/app/src/main/kotlin/com/vibeflow/mobile/accessibility/: VibeFlowAccessibilityService.kt
android/app/src/main/kotlin/com/vibeflow/mobile/ai/: AppStyle.kt  ManagedFormatter.kt  SmartFormatter.kt
android/app/src/main/kotlin/com/vibeflow/mobile/asr/: ModelManager.kt  NoiseProbe.kt  SpeechEngine.kt  SpeechEngines.kt  SystemSpeechEngine.kt  VoiceEffects.kt  VoskSpeechEngine.kt  WhisperAsrClient.kt  WhisperAsrService.kt  (+2 more)
android/app/src/main/kotlin/com/whispercpp/whisper/: WhisperCpuConfig.kt
android/app/src/main/res/drawable/: ic_backspace.xml  ic_chevron_down.xml  ic_language.xml  ic_launcher_background.xml  ic_mic.xml  ic_mic_tile.xml  ic_return.xml  ic_settings.xml  ic_shift.xml  ic_vibeflow_mark.xml
android/app/src/main/res/values/: colors.xml  ic_launcher_background.xml  strings.xml  themes.xml
android/app/src/main/res/xml/: accessibility_service_config.xml  backup_rules.xml  data_extraction_rules.xml  method.xml
android/core/: build.gradle.kts
android/gradle/: libs.versions.toml
dashboard/: .env.example  .gitignore  middleware.js  package-lock.json  package.json
dashboard/app/: globals.css  layout.jsx  page.jsx
dashboard/app/api/admin/maintenance/: route.js
dashboard/app/api/admin/user/: route.js
dashboard/app/api/login/: route.js
dashboard/app/api/logout/: route.js
dashboard/app/legal/privacy/: page.jsx
dashboard/app/legal/terms/: page.jsx
dashboard/app/login/: page.jsx
dashboard/components/: MaintenancePanel.jsx  UserTable.jsx
dashboard/lib/: legal.js  metrics.js  supabase.js
docs/: BACKLOG.md  COMPETITIVE_ANALYSIS.md  INSTALL_ANDROID.md  PLAY_LISTING.md  TEST_CHECKLIST.md
ios/: README.md  project.yml
ios/VibeFlow/: ContentView.swift  SpeechManager.swift  VibeFlowApp.swift
ios/VibeFlowCore/: SharedStore.swift  TextPipeline.swift
ios/VibeFlowKeyboard/: KeyboardViewController.swift
scripts/: make_play_icons.py
supabase/: config.toml  schema.sql
supabase/.temp/: linked-project.json
supabase/functions/claim-device/: index.ts
supabase/functions/polish/: index.ts
(+57 files in other folders)
